syntax = "proto3";

package edu.uci.ics.amber.engine.architecture.worker;

import "edu/uci/ics/amber/engine/architecture/worker/statistics.proto";
import "scalapb/scalapb.proto";

option (scalapb.options) = {
  scope: FILE,
  preserve_unknown_fields: false
  no_default_values_in_constructor: true
};

message CurrentInputTupleInfo {
}

message ControlException {
  string msg = 1;
}

message TypedValue {
  string expression = 1;
  string value_ref = 2;
  string value_str = 3;
  string value_type = 4;
  bool expandable = 5;
}

message EvaluatedValue {
  TypedValue value = 1;
  repeated TypedValue attributes = 2;
}

message ControlReturnV2 {
  oneof value {
    ControlException control_exception = 1;

    WorkerMetrics worker_metrics = 2;
    CurrentInputTupleInfo current_input_tuple_info = 3;
    EvaluatedValue evaluated_value = 4;
  }
}


